Actions
Bug #11929
closedmac_minor_hold() gets id_alloc_nosleep() wrong
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
It should check -1 for failure, not 0.
Related issues
Updated by John Levon over 2 years ago
- Subject changed from mac_minor_hold() gets id_alloc_nosleep() wrong. to mac_minor_hold() gets id_alloc_nosleep() wrong
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 249622b3e0d46f0016d00e3f87b314635d11065a
commit 249622b3e0d46f0016d00e3f87b314635d11065a Author: John Levon <john.levon@joyent.com> Date: 2019-11-07T11:33:27.000Z 11929 mac_minor_hold() gets id_alloc_nosleep() wrong Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Updated by Marcel Telka over 2 years ago
- Related to Bug #11922: ipmi_open looks for wrong return value added
Actions